kub_test/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: edo1997edo/my_back:v1
        ports:
        - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
